# tracelens

./: .env.example  .gitignore  AGENTS.md  DEMO.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/: apekey_benchmark.py  quickstart.py
results/: apekey-benchmark-2026-06-21.json  apekey-benchmark-2026-06-21.report.txt  apekey-benchmark-2026-06-22-v3-ratelimited.json  apekey-benchmark-2026-06-22-v3-ratelimited.report.txt
sdk/: pyproject.toml
sdk/tracelens/: __init__.py  models.py  pricing.py
server/: Dockerfile  main.py  requirements.txt
server/static/: index.html
server/storage/: __init__.py  _clickhouse.py  _sqlite.py
tests/: test_sdk_smoke.py
